testsuite/tests/th/TH_dupdecl.stderr

TH_dupdecl.hs:10:2: error: [GHC-29916]
    Multiple declarations of ‘x’
    Declared at: TH_dupdecl.hs:8:2
                 TH_dupdecl.hs:10:2
